{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 67,
  "lineage": "c4de8433-fa11-2226-8d23-74fb2248b61d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jsbase_main_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00eee3871d4c5a985",
            "arn": "arn:aws:ec2:us-east-1:851725332976:elastic-ip/eipalloc-00eee3871d4c5a985",
            "association_id": "eipassoc-07d7ca7788bc3420c",
            "domain": "vpc",
            "id": "eipalloc-00eee3871d4c5a985",
            "instance": "i-086797e9e3b7235cc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-058465c598c2746bb",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-3-232-84-115.compute-1.amazonaws.com",
            "public_ip": "3.232.84.115",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jsbase_main_ec2",
            "aws_internet_gateway.jsbase_main_igw",
            "aws_key_pair.jsbase_main_key",
            "aws_security_group.jsbase_main_sg",
            "aws_subnet.jsbase_main_subnet",
            "aws_vpc.jsbase_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jsbase_main_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:851725332976:instance/i-086797e9e3b7235cc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086797e9e3b7235cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jsbase_main_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-058465c598c2746bb",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03cb8191b799fbd80",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-082ac39f8a3f9e77c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a2d904f225e7394",
            "tags": {
              "Name": "jsbase_main"
            },
            "tags_all": {
              "Name": "jsbase_main"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082ac39f8a3f9e77c"
            ]
          },
          "dependencies": [
            "aws_key_pair.jsbase_main_key",
            "aws_security_group.jsbase_main_sg",
            "aws_subnet.jsbase_main_subnet",
            "aws_vpc.jsbase_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:851725332976:instance/i-04d334a662a4533ae",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d334a662a4533ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jsbase_main_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e163f83172c053ef",
            "private_dns": "ip-10-0-1-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b98c5f8a5eecd01",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-082ac39f8a3f9e77c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a2d904f225e7394",
            "tags": {
              "Name": "jsbase_main"
            },
            "tags_all": {
              "Name": "jsbase_main"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082ac39f8a3f9e77c"
            ]
          },
          "dependencies": [
            "aws_key_pair.jsbase_main_key",
            "aws_security_group.jsbase_main_sg",
            "aws_subnet.jsbase_main_subnet",
            "aws_vpc.jsbase_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:851725332976:instance/i-07bf60024100a388f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bf60024100a388f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jsbase_main_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-059468fcefd094747",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-080637656219025d1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-082ac39f8a3f9e77c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a2d904f225e7394",
            "tags": {
              "Name": "jsbase_main"
            },
            "tags_all": {
              "Name": "jsbase_main"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082ac39f8a3f9e77c"
            ]
          },
          "dependencies": [
            "aws_key_pair.jsbase_main_key",
            "aws_security_group.jsbase_main_sg",
            "aws_subnet.jsbase_main_subnet",
            "aws_vpc.jsbase_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jsbase_main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725332976:internet-gateway/igw-020d547cb0c56e6e2",
            "id": "igw-020d547cb0c56e6e2",
            "owner_id": "851725332976",
            "tags": {
              "Name": "jsbase_main"
            },
            "tags_all": {
              "Name": "jsbase_main"
            },
            "vpc_id": "vpc-00812793af36ef364"
          },
          "dependencies": [
            "aws_vpc.jsbase_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "jsbase_main_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0161407538096b0af",
            "original_route_table_id": "rtb-0d0da11583587e605",
            "route_table_id": "rtb-0886aca9b13987e23",
            "vpc_id": "vpc-00812793af36ef364"
          },
          "dependencies": [
            "aws_internet_gateway.jsbase_main_igw",
            "aws_route_table.jsbase_main_route_table",
            "aws_vpc.jsbase_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jsbase_main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725332976:route-table/rtb-0886aca9b13987e23",
            "id": "rtb-0886aca9b13987e23",
            "owner_id": "851725332976",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020d547cb0c56e6e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jsbase_main"
            },
            "tags_all": {
              "Name": "jsbase_main"
            },
            "timeouts": null,
            "vpc_id": "vpc-00812793af36ef364"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jsbase_main_igw",
            "aws_vpc.jsbase_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jsbase_main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725332976:security-group/sg-082ac39f8a3f9e77c",
            "description": "jsbase_main security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082ac39f8a3f9e77c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jsbase_main",
            "name_prefix": "",
            "owner_id": "851725332976",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jsbase_main"
            },
            "tags_all": {
              "Name": "jsbase_main"
            },
            "timeouts": null,
            "vpc_id": "vpc-00812793af36ef364"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jsbase_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jsbase_main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725332976:subnet/subnet-02a2d904f225e7394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a2d904f225e7394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725332976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jsbase_main"
            },
            "tags_all": {
              "Name": "jsbase_main"
            },
            "vpc_id": "vpc-00812793af36ef364"
          },
          "dependencies": [
            "aws_vpc.jsbase_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jsbase_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725332976:vpc/vpc-00812793af36ef364",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-052efdcdbbb43cd68",
            "default_route_table_id": "rtb-0886aca9b13987e23",
            "default_security_group_id": "sg-08571a83b68bbb5ee",
            "dhcp_options_id": "dopt-05dedcf411d1317fc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00812793af36ef364",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0886aca9b13987e23",
            "owner_id": "851725332976",
            "tags": {
              "Name": "jsbase_main"
            },
            "tags_all": {
              "Name": "jsbase_main"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "jsbase_main_sg_ingress_icmp_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725332976:security-group-rule/sgr-0a9f26ae8f70a971d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0a9f26ae8f70a971d",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-082ac39f8a3f9e77c",
            "security_group_rule_id": "sgr-0a9f26ae8f70a971d",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jsbase_main_sg",
            "aws_vpc.jsbase_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "jsbase_main_sg_ingress_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725332976:security-group-rule/sgr-0a0cfb5dd7d48d765",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a0cfb5dd7d48d765",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-082ac39f8a3f9e77c",
            "security_group_rule_id": "sgr-0a0cfb5dd7d48d765",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jsbase_main_sg",
            "aws_vpc.jsbase_main_vpc"
          ]
        }
      ]
    }
  ]
}